rocketchat/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rocketchat
  labels:
    app: rocketchat
spec:
  ports:
    - name: webui
      port: 3000
      targetPort: http
      protocol: TCP
    - name: database
      port: 27017
      targetPort: mongo
  selector:
    app: rocketchat
